[gd_scene load_steps=7 format=3 uid="uid://c8j7u76merxgv"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_0yjmq"]
[ext_resource type="Script" path="res://scripts/vr_interaction.gd" id="2_kl4pq"]
[ext_resource type="Script" path="res://scripts/tower_placement.gd" id="3_vxnmr"]
[ext_resource type="Script" path="res://scripts/enemy_system.gd" id="4_8yjnp"]
[ext_resource type="Script" path="res://scripts/vr_tower_placement.gd" id="5_uf2xj"]
[ext_resource type="Script" path="res://scripts/vr_ui.gd" id="6_ywqpd"]

[sub_resource type="Environment" id="Environment_8p3vr"]
background_mode = 1
background_color = Color(0.2, 0.266667, 0.368627, 1)
ambient_light_source = 2
ambient_light_color = Color(0.5, 0.5, 0.5, 1)
tonemap_mode = 2
ssao_enabled = true
fog_enabled = true
fog_light_color = Color(0.517647, 0.552941, 0.607843, 1)
fog_density = 0.001
fog_sky_affect = 0.0

[node name="Main" type="Node3D"]
script = ExtResource("1_0yjmq")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="LeftController" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
tracker = &"left_hand"

[node name="RightController" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)
tracker = &"right_hand"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8p3vr")

[node name="GameWorld" type="Node3D" parent="."]

[node name="Ground" type="CSGBox3D" parent="GameWorld"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
size = Vector3(20, 0.2, 20)
material = null

[node name="VRInteraction" type="Node3D" parent="."]
script = ExtResource("2_kl4pq")

[node name="TowerPlacement" type="Node3D" parent="."]
script = ExtResource("3_vxnmr")

[node name="EnemySystem" type="Node3D" parent="."]
script = ExtResource("4_8yjnp")

[node name="VRTowerPlacement" type="Node3D" parent="."]
script = ExtResource("5_uf2xj")

[node name="VRUI" type="Node3D" parent="."]
script = ExtResource("6_ywqpd")
